feat(DocumentCreating): adding NN connection